# protein-vis

./: .gitignore  README.md  display.py
ray-tracing/: .gitignore  Cargo.toml
ray-tracing/src/: bvh.rs  camera.rs  hittable.rs  main.rs  material.rs  ray.rs  texture.rs  vector3.rs
